# mirra-mvp

./: .gitignore  .gitmodules  CLAUDE.md  MIRRA_SYSTEM_ARCHITECTURE_AND_CLO3D_MIGRATION.md  PHASE1_CLO3D_SETUP_DETAILED_GUIDE.md  PHASE2_CLO3D_CORE_INTEGRATION_DETAILED_GUIDE.md  PHASE3_CLO3D_AUTOMATION_OPTIMIZATION_DETAILED_GUIDE.md  PHASE4_CLO3D_VALIDATION_DEPLOYMENT_DETAILED_GUIDE.md  README.md  SETUP.md  Step_2.md  TECH_STACK.md  pattern_geometry_research.md  requirements.txt  run_avatar_pipeline.py  summary-2.txt  summary.txt  test_clo_import.py
.agent/: 01-discussion-phase.md  02-planning-phase.md  03-execution-phase.md  README.md
.agent/clo-avatar-vto/: delete-folders-files.md  known-issue-26_7_23.md  merge-followup-clo-workspace.md  plan-movement.md  plugin-mac.md  plugin-windows.md  seam-edge-mapping.md  step-1.md  step-3.md  vto-pipeline-debug-plan-26_7_24.md  vto-pipeline-status-26_7_24.md
.agent/coding-rules/: README.md  coding-style.md  file-structure.md
.agent/context/: MVP-Step-2.md  MVP-Step-2B.md  MVP-step-1.md  MVP-step-3.md  idea.md  key-words.md  rest-plugin-server-explained.md  step-1-code-explained.md  step-2-code-explained.md  step-2-command-overlap-analysis.md  step-3-code-explained.md
.agent/plans/: 001-flag.md  001-learning.md  001-plan.md  001-probs.md  002-flag.md  002-learning.md  002-plan.md  002-probs.md  003-plan.md  003-probs.md  004-plan.md  006-plan-star-static-avatar-semantic-data.md  007-plan-clo-native-avatar.md  008-plan.md  009-plan.md  010-plan.md  011-plan.md  012-plan.md  plan-GPU-use.md  plan-tanuj.md
.claude/: current-roadmap.md  faq.md  project-context.md  quick-reference.md  repo-rules.md  settings.json  settings.local.json  troubleshooting.md
.claude/architecture/: architecture.md  step_1_avatar.md  step_2_ingestion.md  step_3_vto.md
.claude/coding-rules/: coding-style.md  tech-stack.md
.claude/commands/: start-work.md
.claude/context/: MVP-step-1.md  MVP-step-2.md  MVP-step-3.md  README.md  key-words.md
.claude/planning/: 001-plan.md  002-probs.md  003-flag.md  003-learning.md  005-plan.md  013-plan.md  014-plan.md  015-plan.md  016-plan.md  plan-tanuj.md  slots missing details.md
.claude/research/: README.md
2D_to_3D_tshirt/: NEXT_STEPS_PLAN.md  PIPELINE_ENHANCEMENT_PLAN.md  PIPELINE_ISSUES_AND_FIXES.md  PIPELINE_SUMMARY.md
2D_to_3D_tshirt/minimal_pipeline/: .gitignore  BLENDER_DEBUG_GUIDE.md  DEBUGGING_SIMULATION.md  QUICK_START.md  (+29 more)
2d_patterned_garment_generation_clo3d/: .gitignore  README.md  garment_router.py  generate_for_avatar.py  generate_patterns_clo3d.py  main.py  tshirt_extractor.py  vision_pipeline.py
Working_Cloth_3D_Pipeline/: README.md  __init__.py  pipeline.py  requirements.txt
after-1-jun/: clo-api-call-types.md  plan-01.md  plan-02.md  plan-03.md  properties-route-investigation.md  research-clo-avatar-structure.md  summary-26-06-30-1.md  summary-26-06-30-2-clo-workspace.md
avatar_generation/: .gitignore  A_POSE_CONVERSION_PLAN.md  README.md  SETUP.md  artifact_io.py  avatar_exporter.py  avatar_exporter_clo.py  first.py  fit_betas.py  mapping_layer.py  mesh_measure.py  pose_catalog.py  run_avatar.py  run_manifest.py  star_runner.py
clo_avatar_generation/: .gitignore  README.md  __init__.py  reporting.py  resize_avatar.py  run_avatar.py  run_clo_vto.py  summary.md
clo_vto/: run_clo_vto.py
clo_workspace/: .env.example  .gitignore  PHASE_1_TESTING.md  PLUGIN_STATUS.md  README.md  SETUP.md  build_plugin.py  clothes_importing_deep_log.md  clothes_importing_error.md  macos_clo_plugin_guide.md  plugin_contract.json
clo_workspace/mac/: CMakeLists.txt  RestPlugin_macOS.cpp  build_plugin.sh
clo_workspace/plugins/: BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  CLO_AUTOMATION_PIPELINE_EXPLAINED.md  CMakeLists.txt  CMakeLists_RestPlugin.txt  RestPlugin.cpp  RestPlugin_clean.cpp  RestPlugin_template.cpp  build_rest_plugin.bat  clo_api_discovery.py  clo_automation_client.py  clo_no_sdk_discovery.py  clo_rest_client.py  discover_seam_indices.py  mirra_pattern_importer.py  stdafx.h
clo_workspace/plugins/clo_automation_steps/: __init__.py  client.py  context.py  helpers.py  pipeline.py  step_01_health.py  step_03_import_avatar.py  step_04_import_patterns.py  step_06_read_edges_and_slots.py  step_07_arrange_patterns.py  step_08_apply_fabric.py  step_09_create_seams.py  step_10_simulate.py
clo_workspace/windows/: CMakeLists.txt  RestPlugin_windows.cpp  build_rest_plugin.bat  dllmain.cpp
collision/: run_collision.py  run_collision.sh
config/: clo_config.py
docs/: clo_avatar_import_troubleshooting.md
garment_generation_clo3d/: README.md  generate_tshirt_clo3d.py
mirra_measurements/: .env.example  README.md  __init__.py  db.py  garment_model.py  golden_users.py  models.py  seed_garments.py  seed_measurements.py  seed_sizes.py  size_model.py
pipeline_star/: A_POSE_CONVERSION_PLAN.md  README.md  SETUP.md  artifact_io.py  artifact_schema.py  avatar_exporter_clo.py  avatar_style.py  clear_generated.py  diagnose_shoulder.py  first.py  fit_betas.py  inspect_star_joints.py  mapping_layer.py  mesh_measure.py  mesh_postprocess.py  pose_catalog.py  run_avatar_pipeline.py  run_manifest.py  star_runner.py  test_shoulder_landmarks.py
product_ingestion/: README.md  colour_extraction.py  curve_config.py  curve_segment.py  design_extraction.py  garment_measurements.py  main.py  panel_export_dxf.py  panel_export_svg.py  panel_generation.py  panels.py  run_manifest.py  run_product_ingestion.py  segmentation.py  test_segmentation.py  texture_projection.py  tshirt_extractor.py  view_selection.py
random/: pattern_fix_implementation_guide.md  research_comparison_taas_mirra.md  test_clo_import.py
tests/: test_clo_api_comprehensive.py  test_clo_connection.py
utils/: device.py
vto/: NOTES_MOVED.md  README.md  VTO_PATTERN_GEOMETRY_STATUS.md  clo_automation_client.py  discover_seam_indices.py  pannel_import.py  run_vto.py
website/: .gitignore  backend-implementation-plan.md  backend-structure-plan.md  frontend-port-summary.md  frontend-structure-plan.md  port-audit-user-side.md  website_pilot_v1_scope.md
(+339 files in other folders)
